--- a/source/Raumkernel2.vcxproj
+++ b/source/Raumkernel2.vcxproj
@@ -85,9 +85,13 @@
     <ClInclude Include="includes\raumkernel\logger\logger.h" />
     <ClInclude Include="includes\raumkernel\logger\loggerAdapter.h" />
     <ClInclude Include="includes\raumkernel\logger\loggerBase.h" />
+    <ClInclude Include="includes\raumkernel\manager\managerBase.h" />
+    <ClInclude Include="includes\raumkernel\manager\managerEngineer.h" />
+    <ClInclude Include="includes\raumkernel\manager\settingsManager.h" />
     <ClInclude Include="includes\raumkernel\os\os.h" />
     <ClInclude Include="includes\raumkernel\raumkernel.h" />
     <ClInclude Include="includes\raumkernel\raumkernelBase.h" />
+    <ClInclude Include="includes\raumkernel\raumkernelBaseMgr.h" />
     <ClInclude Include="includes\raumkernel\rlutil\rlutil.h" />
     <ClInclude Include="includes\raumkernel\signals\config.hpp" />
     <ClInclude Include="includes\raumkernel\signals\connection.hpp" />
@@ -100,8 +104,12 @@
   <ItemGroup>
     <ClCompile Include="logger\logger.cpp" />
     <ClCompile Include="logger\loggerAdapter.cpp" />
+    <ClCompile Include="manager\managerBase.cpp" />
+    <ClCompile Include="manager\managerEngineer.cpp" />
+    <ClCompile Include="manager\settingsManager.cpp" />
     <ClCompile Include="raumkernel.cpp" />
     <ClCompile Include="raumkernelBase.cpp" />
+    <ClCompile Include="raumkernelBaseMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="raumkernel.xml" />
