--- a/source/makefile_linux_X86
+++ b/source/makefile_linux_X86
@@ -13,7 +13,7 @@ LIBSDEF =
 RM = rm -f 
 TARGET_LIB = libs/linux_x86/raumkern.so
  
-SRCS = raumkernelBase.cpp raumkernel.cpp logger/loggerAdapter.cpp logger/logger.cpp
+SRCS = raumkernelBase.cpp raumkernelBaseMgr.cpp  raumkernel.cpp logger/loggerAdapter.cpp logger/logger.cpp manager/managerBase.cpp manager/managerEngineer.cpp manager/settingsManager.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
