--- a/source/makefile_linux_X86_test
+++ b/source/makefile_linux_X86_test
@@ -6,7 +6,7 @@ CC = g++-4.9
 CXX = g++-4.9
 CFLAGS = -std=c++11 -fPIC -Wall -Wextra -O2 -c -pthread $(INCPATH)
 CXXFLAGS = -std=c++11 -fPIC -Wall -Wextra -O2 -c -pthread $(INCPATH)
-LDFLAGS = -shared -pthread -static-libgcc -static-libstdc++
+LDFLAGS = -pthread -static-libgcc -static-libstdc++
 
 LIBSDEF = libs/linux_x86/raumkern.so
 
@@ -17,15 +17,11 @@ SRCS = test.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
-#.PHONY: test
-#test: $(SRCS)
-#	$(CC) -o $(TARGET_LIB) $(SRCS) -shared -fPIC -Wall -Wextra -O2
-
 
 .PHONY: all
-all: ${TARGET_LIB}
+all: ${TARGET_EXEC}
  
-$(TARGET_LIB): $(OBJS)
+$(TARGET_EXEC): $(OBJS)
 	$(CC) ${LDFLAGS} -o $@ $^ $(LIBSDEF)
  
 $(SRCS:.cpp=.d):%.d:%.cpp
@@ -36,4 +32,4 @@ include $(SRCS:.cpp=.d)
 
 .PHONY: clean
 clean:
-	-${RM} ${TARGET_LIB} ${OBJS} $(SRCS:.cpp=.d) 
+	-${RM} ${TARGET_EXEC} ${OBJS} $(SRCS:.cpp=.d) 
