--- a/source/makefile_linux_X86
+++ b/source/makefile_linux_X86
@@ -8,7 +8,7 @@ CFLAGS = -std=c++11 -fPIC -Wall -Wextra -O2 -c -pthread $(INCPATH)
 CXXFLAGS = -std=c++11 -fPIC -Wall -Wextra -O2 -c -pthread $(INCPATH)
 LDFLAGS = -shared -pthread -static-libgcc -static-libstdc++
 
-LIBSDEF = 
+LIBSDEF =  libs/linux_x86/libohNetCore.a libs/linux_x86/libohNetDevices.a libs/linux_x86/libohNetProxies.a
 
 RM = rm -f 
 TARGET_LIB = libs/linux_x86/raumkern.so
