--- a/source/Raumkernel2.vcxproj.filters
+++ b/source/Raumkernel2.vcxproj.filters
@@ -37,6 +37,18 @@
     <Filter Include="includes\raumkernel\xml">
       <UniqueIdentifier>{ad8b8fd6-f976-4c3c-b490-21e949517514}</UniqueIdentifier>
     </Filter>
+    <Filter Include="includes\raumkernel\device">
+      <UniqueIdentifier>{0095d10d-398c-4901-9ab9-9184cd7d177d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="device">
+      <UniqueIdentifier>{153cab5d-b085-47b7-8d9f-1a3b9e244600}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="includes\raumkernel\device\proxies">
+      <UniqueIdentifier>{a6c653fc-74dc-4c75-b260-fc008284ffd1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="device\proxies">
+      <UniqueIdentifier>{33df1c3f-7edc-4108-8d4b-3841cb08962a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\raumkernel\os\os.h">
@@ -120,6 +132,57 @@
     <ClInclude Include="includes\raumkernel\manager\deviceManager.h">
       <Filter>includes\raumkernel\manager</Filter>
     </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\device.h">
+      <Filter>includes\raumkernel\device</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\deviceMediaRenderer.h">
+      <Filter>includes\raumkernel\device</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\deviceCreator.h">
+      <Filter>includes\raumkernel\device</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgAVTransport1.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgAVTransport2.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgConnectionManager1.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgConnectionManager2.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory1.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory2.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory3.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl1.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl2.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\deviceMediaRenderer_RFVirtual.h">
+      <Filter>device</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\deviceMediaRenderer_RF.h">
+      <Filter>device</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgConnectionManager_RaumfeldVirtual1.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl_RaumfeldVirtual1.h">
+      <Filter>includes\raumkernel\device\proxies</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgAVTransport_RaumfeldVirtual1.h">
+      <Filter>device\proxies</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="logger\logger.cpp">
@@ -145,6 +208,57 @@
     </ClCompile>
     <ClCompile Include="manager\deviceManager.cpp">
       <Filter>manager</Filter>
+    </ClCompile>
+    <ClCompile Include="device\device.cpp">
+      <Filter>device</Filter>
+    </ClCompile>
+    <ClCompile Include="device\deviceMediaRenderer.cpp">
+      <Filter>device</Filter>
+    </ClCompile>
+    <ClCompile Include="device\deviceCreator.cpp">
+      <Filter>device</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgAVTransport1Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgAVTransport2Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgConnectionManager1Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgConnectionManager2Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory1Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory2Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory3Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl1Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl2Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\deviceMediaRenderer_RF.cpp">
+      <Filter>includes\raumkernel\device</Filter>
+    </ClCompile>
+    <ClCompile Include="device\deviceMediaRenderer_RFVirtual.cpp">
+      <Filter>includes\raumkernel\device</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgConnectionManager_RaumfeldVirtual1Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl_RaumfeldVirtual1Std.cpp">
+      <Filter>device\proxies</Filter>
+    </ClCompile>
+    <ClCompile Include="device\proxies\CpUpnpOrgAVTransport_RaumfeldVirtual1Std.cpp">
+      <Filter>includes\raumkernel\device\proxies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
