--- a/source/RaumkernelLib.vcxproj
+++ b/source/RaumkernelLib.vcxproj
@@ -91,6 +91,8 @@
     <ClInclude Include="includes\raumkernel\device\deviceMediaRenderer_RF.h" />
     <ClInclude Include="includes\raumkernel\device\deviceMediaRenderer_RFVirtual.h" />
     <ClInclude Include="includes\raumkernel\device\deviceMediaRenderer.h" />
+    <ClInclude Include="includes\raumkernel\device\deviceMediaServer.h" />
+    <ClInclude Include="includes\raumkernel\device\deviceMediaServer_RF.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgAVTransport1.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgAVTransport2.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgAVTransport_RaumfeldVirtual1.h" />
@@ -100,6 +102,7 @@
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory1.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory2.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory3.h" />
+    <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgContentDirectory_Raumfeld1.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl1.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl2.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl_RaumfeldVirtual1.h" />
@@ -138,6 +141,8 @@
     <ClCompile Include="device\deviceMediaRenderer.cpp" />
     <ClCompile Include="device\deviceMediaRenderer_RF.cpp" />
     <ClCompile Include="device\deviceMediaRenderer_RFVirtual.cpp" />
+    <ClCompile Include="device\deviceMediaServer.cpp" />
+    <ClCompile Include="device\deviceMediaServer_RF.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgAVTransport1Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgAVTransport2Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgAVTransport_RaumfeldVirtual1Std.cpp" />
@@ -147,6 +152,7 @@
     <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory1Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory2Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory3Std.cpp" />
+    <ClCompile Include="device\proxies\CpUpnpOrgContentDirectory_Raumfeld1Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl1Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl2Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl_RaumfeldVirtual1Std.cpp" />
