--- a/source/RaumkernelLib.vcxproj
+++ b/source/RaumkernelLib.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl2.h" />
     <ClInclude Include="includes\raumkernel\device\proxies\CpUpnpOrgRenderingControl_RaumfeldVirtual1.h" />
     <ClInclude Include="includes\raumkernel\exception\exception.h" />
+    <ClInclude Include="includes\raumkernel\httpclient\happyhttp.h" />
     <ClInclude Include="includes\raumkernel\httpclient\httpClient.h" />
     <ClInclude Include="includes\raumkernel\httpclient\httpRequest.h" />
     <ClInclude Include="includes\raumkernel\httpclient\httpResponse.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl1Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl2Std.cpp" />
     <ClCompile Include="device\proxies\CpUpnpOrgRenderingControl_RaumfeldVirtual1Std.cpp" />
+    <ClCompile Include="httpclient\happyhttp.cpp" />
     <ClCompile Include="httpclient\httpClient.cpp" />
     <ClCompile Include="httpclient\httpRequest.cpp" />
     <ClCompile Include="httpclient\httpResponse.cpp" />
