--- a/source/RaumkernelLib.vcxproj
+++ b/source/RaumkernelLib.vcxproj
@@ -183,6 +183,9 @@
   <ItemGroup>
     <Xml Include="raumkernel.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
